WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
75453
alignment issue when building with Solaris Studio
https://bugs.webkit.org/show_bug.cgi?id=75453
Summary
alignment issue when building with Solaris Studio
Pavel Heimlich (hajma)
Reported
2012-01-02 16:50:42 PST
Created
attachment 120900
[details]
patch building Qt 4.8 with Solaris Studio fails with the below message. ... "./wtf/Alignment.h", line 33: Error: #error WTF_ALIGN macros need alignment control.. See also
https://bugs.webkit.org/show_bug.cgi?id=57231
, basically alignment macros are supported in Sun/Solaris Studio since v.12 I'm not sure from which webkit version comes the Qt snapshot, but I can see the same code is still present in webkit trunk. The attached patch helped me.
Attachments
patch
(640 bytes, patch)
2012-01-02 16:50 PST
,
Pavel Heimlich (hajma)
no flags
Details
Formatted Diff
Diff
Patch
(1.17 KB, patch)
2012-01-06 12:47 PST
,
Pavel Heimlich (hajma)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2012-01-03 10:03:04 PST
Would you be willing to make a patch that could be reviewed and landed in WebKit trunk, as described in <
http://www.webkit.org/coding/contributing.html
>? We don't normally keep open bugs for patches that are not intended for landing.
Pavel Heimlich (hajma)
Comment 2
2012-01-06 12:47:33 PST
Created
attachment 121473
[details]
Patch
Hajime Morrita
Comment 3
2012-01-16 01:35:51 PST
Comment on
attachment 121473
[details]
Patch Now this has a ChangeLog entry. Bots don't cry. Looks OK to land.
WebKit Review Bot
Comment 4
2012-01-16 02:23:18 PST
Comment on
attachment 121473
[details]
Patch Clearing flags on attachment: 121473 Committed
r105044
: <
http://trac.webkit.org/changeset/105044
>
WebKit Review Bot
Comment 5
2012-01-16 02:23:22 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug