Solaris Studio supports alignment macros too https://bugs.webkit.org/show_bug.cgi?id=75453

Patch by Pavel Heimlich <tropikhajma@gmail.com> on 2012-01-16
Reviewed by Hajime Morita.

* wtf/Alignment.h:

Canonical link: https://commits.webkit.org/93177@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105044 268f45cc-cd09-0410-ab3c-d52691b4dbfc